force-app/main/default/objects/Record_Type_ids__c.object
<CustomObject>
    <fields>
        <fullName>Id__c</fullName>
        <description>The Id of the record type</description>
        <label>Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>The name of the record type</description>
        <label>Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Type__c</fullName>
        <description>The type of SObject the Id is used for</description>
        <label>SObject Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>This is used to minimize queries for record type ids.</description>
    <label>Record Type Ids</label>
</CustomObject>